# FastAPI-Todo-App

./: .env  pyproject.toml
fastapi_neon/: auth.py  database.py  main.py  models.py  schemas.py  settings.py  streamlit_ui.py
tests/: test_main.py
